feat: 实现管理员分页获取错误监控列表接口
